DEPLOY DAMN YOU

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project3-expedition",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://stephensant.github.io/Project3-FrontEnd/",
+  "homepage": "https://stephensant.github.io/Project3-FrontEnd",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
