DEPLOY DAMN YOU

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://61b183fe5d5f17d3a331a650--hungry-blackwell-b56090.netlify.app/",
   "name": "project3-expedition",
   "version": "0.1.0",
   "private": true,
